# PDE_solver

./: .gitignore  CMakeLists.txt  README.md  default.csv  performance.md
src/: CMakeLists.txt  main.cpp
src/functions/: CMakeLists.txt  Mesh.cpp  Mesh.h  boundaries.cpp  boundaries.h  gauss_seidel.cpp  gauss_seidel.h  inputHandler.cpp  jacobi.cpp  jacobi.h  write_to_csv.cpp  write_to_csv.h
src/functions/input/: CMakeLists.txt  boundaries.cpp  boundaries.h  inputHandler.cpp  inputHandler.h
src/functions/methods/: CMakeLists.txt  gauss_seidel.cpp  gauss_seidel.h  jacobi.cpp  jacobi.h
src/functions/objects/: CMakeLists.txt  CmakeLists.txt  Mesh.cpp  Mesh.h  Node.h  Parameters.cpp  Parameters.h  boundaries.cpp  boundaries.h
src/objects/: CMakeLists.txt  Mesh.cpp  Mesh.h  Node.h
tests/: CMakeLists.txt  jacobiTest.cpp  jacobiTest.h  test.csv
